# db-api-message

./: .gitignore  clean.csv  clean.py  combine_csv.py  csv_zusammenfassen.py  data_cleaning.ipynb  fetch_data.py  pyproject.toml
data/: s_bahn_stuttgart_daten_20241019_120244.csv  s_bahn_stuttgart_daten_20241019_120422.csv  s_bahn_stuttgart_daten_20241019_120647.csv  s_bahn_stuttgart_daten_20241019_131935.csv  s_bahn_stuttgart_daten_20241019_141442.csv  s_bahn_stuttgart_daten_20241019_151519.csv  s_bahn_stuttgart_daten_20241019_161857.csv  s_bahn_stuttgart_daten_20241019_171405.csv  s_bahn_stuttgart_daten_20241019_182013.csv  s_bahn_stuttgart_daten_20241019_191257.csv  s_bahn_stuttgart_daten_20241019_201658.csv  s_bahn_stuttgart_daten_20241019_211457.csv  s_bahn_stuttgart_daten_20241019_221522.csv  s_bahn_stuttgart_daten_20241019_231528.csv  s_bahn_stuttgart_daten_20241020_012138.csv  s_bahn_stuttgart_daten_20241020_025451.csv  s_bahn_stuttgart_daten_20241020_032613.csv  s_bahn_stuttgart_daten_20241020_041933.csv  s_bahn_stuttgart_daten_20241020_051526.csv  s_bahn_stuttgart_daten_20241020_062201.csv  s_bahn_stuttgart_daten_20241020_071415.csv  s_bahn_stuttgart_daten_20241020_082202.csv  s_bahn_stuttgart_daten_20241020_091557.csv  s_bahn_stuttgart_daten_20241020_101651.csv  s_bahn_stuttgart_daten_20241020_111402.csv  s_bahn_stuttgart_daten_20241020_135622.csv  s_bahn_stuttgart_daten_20241020_144013.csv  s_bahn_stuttgart_daten_20241020_150315.csv  s_bahn_stuttgart_daten_20241020_152739.csv  s_bahn_stuttgart_daten_20241020_153954.csv  s_bahn_stuttgart_daten_20241020_155116.csv  (+72491 more)
(+2 files in other folders)
